lib/fur/fur.treetop
grammar Fur
  rule tree
    (pexp / exp)+ <Tree>
  end

  rule pexp
    '(' body:(pexp / body) ')' <Exp>
  end

  rule exp
    body:body terminator? <Exp>
  end

  rule body
    list / function / exec / string / integer / boolean / identifier / space
  end

  rule function
    name:('->' / identifier) params:(space / param)* '{' body:tree? '}' <Function>
  end

  rule exec
    name:identifier args:(pexp / list / function / string / integer / boolean / identifier / space)* '!' <Exec>
  end

  rule list
    '[' members:(pexp / string / integer / boolean / identifier / space)* ']' <List>
  end

  rule string
    '"' body:[^"]* '"' <String>
  end

  rule integer
    [\d]+ <Integer>
  end

  rule identifier
    !reserved [a-zA-Z]+ [\w\-_]* <Identifier>
  end

  rule boolean
    '#' ('t' / 'f') <Boolean>
  end

  rule param
    name:(!reserved [a-zA-Z]+ [\w\-_]*) ':' tag:tag <Param>
  end

  rule reserved
    '(' / ')' / '{' / '}' / '!' / boolean / tag
  end

  rule tag
    'int' / 'str' / 'fun' / 'bln' / 'lst'
  end

  rule terminator
    [;\n]
  end

  rule space
    [\s\t\n\r]+ <Space>
  end
end
